fix(controller): 修复遥测数据处理和UI更新逻辑
- 修复了AnalogInput构造函数中的默认最大最小值设置问题
- 移除了app模块中的废弃main类文件
- 优化了遥测数据订阅和更新逻辑，避免重复添加数据
- 改进了警告对话框的标题和内容显示
- 添加了设备运行状态检查，防止删除运行中的设备
- 修复了UI线程更新和数据绑定的相关问题
- 添加了遥信数据列表到RTU模型中